--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <script src="js/init.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/mainCtrl.js"></script>
+	<script src="js/profCtrl.js"></script>
 	<script src="js/booksCtrl.js"></script>
 	<script src="js/mainService.js"></script>
 	<script src="js/navbarDirective.js"></script>
