--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,16 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js"></script>
+	<script src="js/lib/angular-animate.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js "></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js"></script>
 	<script src="https://cdn.auth0.com/js/lock/10.15/lock.min.js"></script>
 	<script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/mainCtrl.js"></script>
+	<script src="js/homeCtrl.js"></script>
 	<script src="js/profCtrl.js"></script>
-	<script src="js/booksCtrl.js"></script>
 	<script src="js/mainService.js"></script>
 	<script src="js/navbarDirective.js"></script>
 
@@ -31,7 +32,7 @@
 <navbar-directive></navbar-directive>
 
 
-<ui-view></ui-view>
+<main ui-view></main>
 
 
 
