--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Vubooks</title>
+	<title>vubooks</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="styles/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="styles/styles.css" type="text/css" rel="stylesheet" media="screen,projection"/>
